Fixed secondary navigation mobile responsiveness cleaned up functions.php

--- a/style.css
+++ b/style.css
@@ -137,8 +137,6 @@ Defaults
 /* Typographical Elements
 --------------------------------------------- */
 
-/* ff6b50 */
-
 body {
 	color: #2f2f2f;
 	font-family: 'Bitter', sans-serif;
@@ -1187,7 +1185,19 @@ Site Navigation
 	box-shadow: inset 0 -3px 5px 0 rgba(0,0,0,0.2), inset 0 3px 5px 0 rgba(0,0,0,0.2);
 }
 
+.nav-secondary .menu-item {
+	display: block;
+	text-align: center;
+}
+
+@media only screen and (min-width: 600px) {
+	.nav-secondary .menu-item {
+		display: inline-block;
+	}
+}
+
 .nav-secondary .genesis-nav-menu > li > a {
+	display: inline-block;
 	padding: 6px 20px;
 	color: #2f2f2f;
 }
